# gps_rover

./: .gitignore  CLAUDE.md  CMakeLists.txt  GPSSeeder.iss  LICENSE  README.md  build_mingw.bat  default.json
.claude/: settings.local.json
.trae/documents/: plan_20260121_062610.md  serial_port_fix_plan.md  修复项目编译错误.md  创建测试高德地图基本功能的脚本.md  简化数据处理层次逻辑方案.md  解决MCP server找不到uvx的方案.md  解决MCP server配置错误的方案.md
.trae/rules/: project_rules.md
docs/: GPS-Rover 项目总手册.md  KF-GINS融合集成方案.md  OPTIMIZATION_NOTES.md  optimization_advice.md  pos_estimator.md  串口假死问题修复说明.md  信号槽与多线程调用关系示意图.md  基于分割线的播种触发逻辑编排.md  数据处理层融合集成方案.md  界面设计.md  系统梳理文档.md  软件架构.md
others/: gnssserialparser.cpp
scripts/: modbus_light_simulator.py  modbus_motor_simulator.py  modbus_simulator.py  nmea_generator.py
src/: main.cpp
src/core/common/: angle.h  earth.h  logger.cpp  logger.h  rotation.h  time_sync.cpp  time_sync.h  types.h
src/core/controller/: predictivecontroller.cpp  predictivecontroller.h
src/core/coordinate/: coordinateconverter.cpp  coordinateconverter.h
src/core/estimator/: statestimator.cpp  statestimator.h
src/core/fileio/: gnssserialloader.cpp  gnssserialloader.h  imuserialloader.cpp  imuserialloader.h  imuserialparser.cpp  serialport.cpp  serialport.h
src/core/sensor/: sensorinterface.cpp  sensorinterface.h
src/database/: dbmanager.cpp  dbmanager.h
src/map/: README.md  blockgenerator.cpp  blockgenerator.h  coordinate.cpp  coordinate.h  fieldmanager.cpp  fieldmanager.h  mapwidget.cpp  mapwidget.h  osmtilelayer.cpp  osmtilelayer.h  pathgenerator.cpp  pathgenerator.h  statestimator.cpp  statestimator.h  tablewidget.cpp  tablewidget.h  关于触发线生成和触发时机精确计算方式的说明.md
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/ui_bak/ui/: mainwindow.h
src/ui_v2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mapsubwindow.ui  settingssubwindow.ui  storagesubwindow.ui  summarysubwindow.ui  ui_mainwindow.h
